--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
-/* ===== Import des fonts ===== */
+/* Import des fonts */
 @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Kapakana:wght@300..400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
-/* ===== Reset & base ===== */
+/* Reset & base */
 * {
     margin: 0;
     padding: 0;
@@ -28,7 +28,7 @@ body {
     z-index: -1;
 }
 
-/* ===== Header ===== */
+/* Header */
 header {
     width: 100%;
     background-color: rgba(140, 101, 16, 0.8); /* corrigé syntaxe rgba */
@@ -74,7 +74,7 @@ h1 {
     width: 100%;
 }
 
-/* ===== Section principale (main) ===== */
+/* Section principale (main) */
 main {
     width: 100%;
     max-width: 1400px;
@@ -132,7 +132,7 @@ main {
     80%, 100% { content: '...'; }
 }
 
-/* ===== Texte d'introduction ===== */
+/* Texte d'introduction */
 #intro-text {
     max-width: 800px;
     margin: 10px auto 5rem auto;
@@ -188,7 +188,7 @@ main {
     color: #411501;
 }
 
-/* ===== Cartes ===== */
+/* Cartes */
 .cards-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -201,6 +201,7 @@ main {
 
 .zodiac-card {
     background-image: url("../images/fond-horoscope.png");
+    opacity: 0.9;
     border-radius: 15px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -249,7 +250,7 @@ main {
     margin-top: 0.5rem;
 }
 
-/* ===== Footer ===== */
+/* Footer */
 footer {
     background-color: rgba(8, 5, 2, 0.8);
     color: #e6e4e4;
@@ -270,7 +271,7 @@ footer {
   
 }
 
-/* ===== Modal ===== */
+/* Modal */
 .modal {
     display: none;
     position: fixed;
@@ -280,34 +281,39 @@ footer {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background: linear-gradient(135deg, #db7210, #f0c82f);
-    background-color: rgba(0, 0, 0, 0.4);
     padding-top: 60px;
 }
-
 .modal-content {
-    background-color: #fefefe;
+    background-color: #de7708;
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
     max-width: 600px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 5px 5px 5px black;
+    line-height: 1rem;
 }
 .modal-content h2 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    font-family: "Fredericka the Great", serif;
+    font-weight: 500;
 }
 .modal-content p {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    
 }
-
+.modal-content {
+   font-size: 18px;
+}
 .close-btn {
-    color: #aaa;
+    color: #e2ba08;
+    padding: 5px;
     float: right;
     font-size: 28px;
     font-weight: bold;
+    background-color: #411501;
 }
 
 .close-btn:hover,
@@ -317,7 +323,7 @@ footer {
     cursor: pointer;
 }
 
-/* ===== Media Queries ===== */
+/* Media Queries */
 @media (max-width: 768px) {
     .logo-container h1 {
         font-size: 4rem;
